--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<div id="root"></div>
+		<div id="root" style="background-color: #0f172a;"></div>
 	</body>
 </html>
